--- a/phone-zone/src/App.css
+++ b/phone-zone/src/App.css
@@ -1,38 +1,16 @@
-.App {
+*{ 
+  font-family: inter;
+}
+.phones{
+  width: 300px;
+  height: 400px;
+  padding: 7px;
+  margin: 3px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   text-align: center;
+  background-color: #F5F5F5;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  flex-wrap: wrap;
 }
